[SOFIT-131] Test: Converter 시그니처 변경에 따른 테스트 호출부 allMonthsData 파라미터 추가